--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "sass": "^1.69.3",
     "solid-bootstrap": "^1.0.18",
+    "solid-icons": "^1.0.12",
     "solid-js": "^1.7.8",
     "solid-popper": "^0.3.0"
   },
